--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <joda-time.version>2.5</joda-time.version>
     
     <commons-lang3.version>3.3.2</commons-lang3.version>
-    <commons-io.version>2.4</commons-io.version>
+    <commons-io.version>1.3.2</commons-io.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
     
     <jackson.version>2.4.2</jackson.version>
@@ -92,7 +92,7 @@
    	
    	<!-- 通用Mapper -->
    	<dependency>
-   		<groupId>com.github.abe1533</groupId>
+   		<groupId>com.github.abel533</groupId>
    		<artifactId>mapper</artifactId>
    		<version>${mapper.version}</version>
    	</dependency>
@@ -227,6 +227,14 @@
   				<target>1.7</target>
   				<encoding>UTF-8</encoding>
   			</configuration>
+  		</plugin>
+  		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.18.1</version>
+			<configuration>
+				<skipTests>true</skipTests>
+			</configuration>
   		</plugin>
   	</plugins>
   </build>
