--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,9 @@
 
   <name>jt-parent</name>
   <url>http://maven.apache.org</url>
-  
-<!-- 集中定义依赖版本号 -->
+
+  <!-- 集中定义依赖版本号 --> 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>4.10</junit.version>
     <spring.version>4.1.3.RELEASE</spring.version>
     
@@ -34,7 +33,7 @@
     <joda-time.version>2.5</joda-time.version>
     
     <commons-lang3.version>3.3.2</commons-lang3.version>
-    <commons-io.version>1.3.2</commons-io.version>
+    <commons-io.version>2.4</commons-io.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
     
     <jackson.version>2.4.2</jackson.version>
@@ -43,199 +42,213 @@
   </properties>
 
   <dependencies>
- 	<!-- 单元测试 -->
+    <!-- 单元测试 -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
-      <scope>test</scope> 
-    </dependency>
-    <!-- spring -->
+      <scope>test</scope>
+    </dependency> 
+    
+    <!-- Spring -->
     <dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-context</artifactId>
-    	<version>${spring.version}</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-beans</artifactId>
-    	<version>${spring.version}</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-aspects</artifactId>
-    	<version>${spring.version}</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>${spring.version}</version>
     </dependency>
-   	
-   	<!-- Mybatis -->
-   	<dependency>
-   		<groupId>org.mybatis</groupId>
-   		<artifactId>mybatis</artifactId>
-   		<version>${mybatis.version}</version>
-   	</dependency>
-   	<dependency>
-   		<groupId>org.mybatis</groupId>
-   		<artifactId>mybatis-spring</artifactId>
-   		<version>${mybatis.spring.version}</version>
-   	</dependency>
-   	<dependency>
-   		<groupId>com.github.miemiedev</groupId>
-   		<artifactId>mybatis-paginator</artifactId>
-   		<version>${mybatis.paginator.version}</version>
-   	</dependency>
-   	<!-- Mysql -->
-   	<dependency>
-   		<groupId>mysql</groupId>
-   		<artifactId>mysql-connector-java</artifactId>
-   		<version>${mysql.version}</version>
-   	</dependency>
-   	
-   	<!-- 通用Mapper -->
-   	<dependency>
-   		<groupId>com.github.abel533</groupId>
-   		<artifactId>mapper</artifactId>
-   		<version>${mapper.version}</version>
-   	</dependency>
-   	
-   	<!-- 分页插件  -->
-   	<dependency>
-   		<groupId>com.github.pagehelper</groupId>
-   		<artifactId>pagehelper</artifactId>
-   		<version>${pagehelper.version}</version>
-   	</dependency>
-   	<dependency>
-   		<groupId>com.github.jsqlparser</groupId>
-   		<artifactId>jsqlparser</artifactId>
-   		<version>${jsqlparser.version}</version>
-   	</dependency>
-   	<!-- 连接池 -->
-   	<dependency>
-   		<groupId>com.jolbox</groupId>
-   		<artifactId>bonecp-spring</artifactId>
-   		<version>${bonecp-spring.version}</version>
-   	</dependency>
-   	
-   	<dependency>
-   		<groupId>org.slf4j</groupId>
-   		<artifactId>slf4j-log4j12</artifactId>
-   		<version>${slf4j.version}</version>
-   	</dependency>
-   	
-   	<!-- Jackson Json处理工具包 -->
-   	<dependency>
-   		<groupId>com.fasterxml.jackson.core</groupId>
-   		<artifactId>jackson-databind</artifactId>
-   		<version>${jackson.version}</version>
-   	</dependency>
-   	
-   	<!-- httpclient -->
-   	<dependency>
-   		<groupId>org.apache.httpcomponents</groupId>
-   		<artifactId>httpclient</artifactId>
-   		<version>${httpclient.version}</version>
-   	</dependency>
-   	<dependency>
-   		<groupId>org.apache.httpcomponents</groupId>
-   		<artifactId>httpmime</artifactId>
-   		<version>4.3.1</version>
-   	</dependency>
-   	<!-- JSP相关  -->
-   	<dependency>
-   		<groupId>jstl</groupId>
-   		<artifactId>jstl</artifactId>
-   		<version>${jstl.version}</version>
-   	</dependency>
-   	<dependency>
-   		<groupId>javax.servlet</groupId>
-   		<artifactId>servlet-api</artifactId>
-   		<version>${servlet-api.version}</version>
-   		<scope>provided</scope>
-   	</dependency>
-   	<dependency>
-   		<groupId>javax.servlet</groupId>
-   		<artifactId>jsp-api</artifactId>
-   		<version>${jsp-api.version}</version>
-   		<scope>provided</scope>
-   	</dependency>
-   	<!-- 时间操作组件 -->
-   	<dependency>
-   		<groupId>joda-time</groupId>
-   		<artifactId>joda-time</artifactId>
-   		<version>${joda-time.version}</version>
-   	</dependency>
-   	
-   	<!-- Apache工具组件 -->
-   	<dependency>
-   		<groupId>org.apache.commons</groupId>
-   		<artifactId>commons-lang3</artifactId>
-   		<version>${commons-lang3.version}</version>
-   	</dependency>
-   	<dependency>
-   		<groupId>org.apache.commons</groupId>
-   		<artifactId>commons-io</artifactId>
-   		<version>${commons-io.version}</version>
-   	</dependency>
-   	<!-- 文件上传组件  -->
-   	<dependency>
-   		<groupId>commons-fileupload</groupId>
-   		<artifactId>commons-fileupload</artifactId>
-   		<version>${commons-fileupload.version}</version>
-   	</dependency>
-   	
-   	<!-- jedis -->
-   	<dependency>
-   		<groupId>redis.clients</groupId>
-   		<artifactId>jedis</artifactId>
-   		<version>${jedis.version}</version>
-   	</dependency>
-   	
-   	<!-- 字符加密、解密 -->
-   	<dependency>
-   		<groupId>commons-codec</groupId>
-   		<artifactId>commons-codec</artifactId>
-   		<version>1.9</version>
-   	</dependency>
-   	
-   	<!-- 数据校验  -->
-   	<dependency>
-   		<groupId>org.hibernate</groupId>
-   		<artifactId>hibernate-validator</artifactId>
-   		<version>5.1.3.Final</version>
-   	</dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit</artifactId>
+      <version>1.4.5.RELEASE</version>
+    </dependency>
+    
+    <!-- Mybatis -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>${mybatis.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>${mybatis.spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.miemiedev</groupId>
+      <artifactId>mybatis-paginator</artifactId>
+      <version>${mybatis.paginator.version}</version> 
+    </dependency> 
+    
+    <!-- Mysql -->
+    <dependency> 
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql.version}</version>
+    </dependency>
+    
+    <!-- 通用Mapper -->
+    <dependency>
+      <groupId>com.github.abel533</groupId>
+      <artifactId>mapper</artifactId> 
+      <version>${mapper.version}</version>
+    </dependency>
+
+	<!-- 分页插件 -->
+	<dependency>
+	  <groupId>com.github.pagehelper</groupId>
+	  <artifactId>pagehelper</artifactId>
+	  <version>${pagehelper.version}</version>
+	</dependency>    
+	<dependency>
+	  <groupId>com.github.jsqlparser</groupId>
+	  <artifactId>jsqlparser</artifactId>
+	  <version>${jsqlparser.version}</version>
+	</dependency>
+	
+	<!-- 连接池 -->
+	<dependency>
+	  <groupId>com.jolbox</groupId>
+	  <artifactId>bonecp-spring</artifactId>
+	  <version>${bonecp-spring.version}</version> 
+	</dependency>
+	
+	<!-- 日志 -->
+	<dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-log4j12</artifactId>
+	  <version>${slf4j.version}</version> 
+	</dependency> 
+	
+	<!-- Jackson Json处理工具包 -->
+	<dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-databind</artifactId>
+	  <version>${jackson.version}</version>
+	</dependency>
+	
+	<!-- httpclient -->
+	<dependency>
+	  <groupId>org.apache.httpcomponents</groupId>
+	  <artifactId>httpclient</artifactId>
+	  <version>${httpclient.version}</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.httpcomponents</groupId>
+	  <artifactId>httpmime</artifactId>
+	  <version>4.3.1</version>
+	</dependency>
+	
+	<!-- JSP相关 -->
+	<dependency>
+	  <groupId>jstl</groupId>
+	  <artifactId>jstl</artifactId>
+	  <version>${jstl.version}</version>
+	</dependency>
+	<dependency>
+	  <groupId>javax.servlet</groupId>
+	  <artifactId>servlet-api</artifactId>
+	  <version>${servlet-api.version}</version>
+	  <scope>provided</scope>
+	</dependency>
+	
+	<!-- Apache工具组件 -->
+	<dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-lang3</artifactId>
+	  <version>${commons-lang3.version}</version>
+	</dependency>
+	<!--  <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-io</artifactId> 
+	  <version>${commons-io.version}</version>
+	</dependency>-->
+	<dependency>
+	  <groupId>commons-io</groupId>
+	  <artifactId>commons-io</artifactId>
+	  <version>${commons-io.version}</version>
+	</dependency>
+	
+	<!-- 文件上传组件 -->
+	<dependency>
+	  <groupId>commons-fileupload</groupId>
+	  <artifactId>commons-fileupload</artifactId>
+	  <version>${commons-fileupload.version}</version>
+	</dependency>
+	
+	<!-- jedis -->
+	<dependency>
+	  <groupId>redis.clients</groupId>
+	  <artifactId>jedis</artifactId>
+	  <version>${jedis.version}</version>
+	</dependency>
+	 
+	<!-- 字符加密、解密 -->
+	<dependency>
+	  <groupId>commons-codec</groupId>
+	  <artifactId>commons-codec</artifactId>
+	  <version>1.9</version>
+	</dependency> 
+	
+	<!-- 数据校验 -->
+	<dependency>
+	  <groupId>org.hibernate</groupId>
+	  <artifactId>hibernate-validator</artifactId>
+	  <version>5.1.3.Final</version>
+	</dependency>
+	
+	<!-- 消息队列 -->
+	<dependency>
+		<groupId>com.rabbitmq</groupId>
+		<artifactId>amqp-client</artifactId>
+		<version>3.5.1</version>
+	</dependency>
+	
   </dependencies>
   
   <build>
-  	<finalName>${project.artifactId}</finalName>
-  	<plugins>
-  		<!-- 资源文件拷贝插件  -->
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-resources-plugin</artifactId>
-  			<version>2.7</version>
-  			<configuration>
-  				<encoding>UTF-8</encoding>
-  			</configuration>
-  		</plugin>
-  		
-  		<!-- JAVA编译插件  -->
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>3.2</version>
-  			<configuration>
-  				<source>1.7</source>
-  				<target>1.7</target>
-  				<encoding>UTF-8</encoding>
-  			</configuration>
-  		</plugin>
-  		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<version>2.18.1</version>
-			<configuration>
-				<skipTests>true</skipTests>
-			</configuration>
-  		</plugin>
-  	</plugins>
-  </build>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+      <!-- 资源拷贝插件 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <!-- java编译插件 修改编译版本及格式-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+          <encoding>UTF-8</encoding> 
+        </configuration> 
+      </plugin>
+    </plugins>
+  </build> 
+  
 </project>
